maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:60: error: ')' expected but 'if' found.
  if (aMurSud(x,y)==false && getIndication(x,y+1)<getIndication(x,y){return 1}
  ^JediEscaper:61: error: ')' expected but 'if' found.
  if (aMurEst(x,y)==false && getIndication(x+1,y)<getIndication(x,y){return 2}
  ^JediEscaper:62: error: ')' expected but 'if' found.
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y){return 3}
  ^JediEscaper:63: error: ')' expected but 'if' found.
  if (estSurBiscuit==true){return 4}
  ^